# cxx_template

./: .gitignore  CMakeLists.txt  README.md
cmake/: clang-format.cmake  gtest.cmake  llvm-coverage.cmake  utils.cmake
tests/: CMakeLists.txt  main.test.cpp
